[gd_scene load_steps=3 format=3 uid="uid://njqcn2v2ooe5"]

[ext_resource type="Script" uid="uid://cu1e0ii8hf8rn" path="res://scripts/text_graph_node.gd" id="1_nf2nf"]
[ext_resource type="PackedScene" uid="uid://bnfa3c6dm1fre" path="res://nodes/PopupContainer.tscn" id="2_3qy60"]

[node name="TextGraphNode" type="GraphNode" node_paths=PackedStringArray("popup_container", "close_button")]
offset_right = 400.0
offset_bottom = 300.0
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_nf2nf")
popup_container = NodePath("PopupContainer")
close_button = NodePath("HBoxContainer/CloseButton")
graph_class_name = "TextGraphNode"
metadata/_custom_type_script = "uid://c0tt7qeudxgun"

[node name="PopupContainer" parent="." instance=ExtResource("2_3qy60")]
visible = false

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="ConnectionAdd" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="ConnectionRemove" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="CloseButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "close"

[node name="TextEdit_0" type="TextEdit" parent="."]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
caret_blink = true

[connection signal="pressed" from="HBoxContainer/ConnectionAdd" to="." method="_add_node_slots"]
[connection signal="pressed" from="HBoxContainer/ConnectionRemove" to="." method="_add_node_slots"]
